# projeto-versionamento-preditiva

./: 404.html  README.md  index.html  pyproject.toml  search.html
docs/: mkdocs.yml
docs/docs/: git.md  index.md
git/: index.html
notebooks/: notebook_exemplo.ipynb  projeto_ds.ipynb  teste  teste_branch main
search/: search_index.json
